# cloudmesh-ai-openapi

./: #Makefile#  404.html  CHANGELOG.md  Dockerfile  MANUAL.md  Makefile  README-ai.md  README-sklearn.md  README-tests.html  README.md  docker-compose.yaml  gen_docs.sh  index.html  manual.html  manual.md  mkdocs.yml  open_safari.sh  prompt-ai-function.md  pyproject.toml  reload_safari.sh  requirements.txt  sklearn.html
.github/workflows/: release.yml
api/: index.html
docs/: README-ai.md  api.md  gen_docs.sh  index.md  manual.md  mkdocs.yml  prompt-ai-function.md  sklearn.md
docs/api/: index.html  search.js
search/: search_index.json
tests/: test_001_registry.py  test_002_registry_mongo.py  test_003_server_manage_cpu.py  test_010_generator.py  test_011_generator_cpu.py  test_012_generator_calculator.py  test_015_generator_azureai.py  test_020_server_manage.py  test_030_generator_eigenfaces_svm.py  test_server_cms_cpu.py  util.py
tests/Scikitlearn-boltzmann/: boltzmann.py
tests/Scikitlearn-experimental/: sklearn_svm.py  sklearn_svm_upload-enabled.py
tests/Scikitlearn-tests/: test_06a_sklearngeneratortest.py  test_06b_sklearngeneratortest.py  test_06c_sklearngeneratortest.py  test_06d_sklearngeneratortest.py
tests/deprecated/: test_generator_broken.py  test_server_cms_cpu-windows-broken.py
tests/generator-azureai/: azure-ai-image-function.py  azure-ai-image-function_upload-enabled.py  azure-ai-text-function.py  azure-ai-text-function_upload-enabled.py  test_06_generator.py
tests/generator-calculator/: test_01_generator.py
tools/: tools.py
(+67 files in other folders)
