[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmesh-ai-openapi"
requires-python = ">=3.9"

dynamic = ["version"]
description = "Cloudmesh OpenAPI Service Generator AI version"
license = "Apache-2.0"
urls = { "Homepage" = "https://github.com/cloudmesh-ai/cloudmesh-ai-openapi" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cloudmesh-ai-common",
    "cloudmesh-ai-cmc",
    "cloudmesh-ai-hpc",
    "click",
    "rich",
    "pytest",
    "connexion[swagger-ui]",
    "docstring_parser",
    "azure-ai-textanalytics",
    "google-cloud-translate",
    "google-cloud-language",
    "msrest",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.entry-points."cloudmesh.ai.command"]
openapi = "command.openapi:register"

[tool.setuptools.packages.find]
where = ["src/cloudmesh/ai"]
include = ["command*", "openapi*"]